@@ -76,6 +76,26 @@ def test_has_key():
     cache.remove_value("test")
     assert not cache.has_key("test")
 
+def test_memcache_dropping_keys():
+    cache = Cache('test', data_dir='./cache', url=mc_url, type='ext:memcached')
+    cache.set_value('test', 20)
+    cache.set_value('fred', 10)
+    assert cache.has_key('test')
+    assert 'test' in cache
+    assert cache.has_key('fred')
+    
+    # Directly nuke the actual key, to simulate it being removed by memcached
+    cache._containers['test'].namespacemanager.mc.delete('test_test')
+    assert not cache.has_key('test')
+    assert cache.has_key('fred')
+    
+    # Nuke the keys dict, it might die, who knows
+    cache._containers['test'].namespacemanager.mc.delete('test:keys')
+    assert cache.has_key('fred')
+    
+    # And we still need clear to work, even if it won't work well
+    cache.clear()
+
 def test_has_key_multicache():
     cache = Cache('test', data_dir='./cache', url=mc_url, type='ext:memcached')
     o = object()
